Tests for user_data and model