@@ -37,6 +37,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'com.jayway.jsonpath:json-path:2.9.0'
     testImplementation 'org.mockito:mockito-core:4.2.0'
+    testImplementation 'org.mockito:mockito-inline:4.2.0'
 }
 
 application {
@@ -45,6 +46,7 @@ application {
 
 test {
     useJUnitPlatform()
+    jvmArgs += ["-Djdk.attach.allowAttachSelf=true"]
 }
 
 tasks.named('jar') {
